src/components/animation-css/About.css
  
  .charts {
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    
    
    border: solid pink;
  }
  .chart {
    display: flex;
    align-items: center;
    height: 90%;
    width: 90%;

    border: solid purple;
   
  }

  .chart:first-child {
    margin: 0;
  }

  .chart__title {
    display: block;
    margin: 0 0 10px;
    font-weight: bold;
    opacity: 0;
    animation: 1s anim-lightspeed-in ease forwards;
  }
  .chart--prod .chart__title {
    animation-delay: 3.3s;
  }
  .chart--design .chart__title {
    animation-delay: 4.5s;
  }
  .chart--horiz {
    width: 100%;
    overflow: hidden;
  }
  .chart__bar {
    height: 3%;
    padding: 0.3%;
    font-size: 2rem;
    font-family: 'Ovo', serif;
    margin: 4% 0;
    background: linear-gradient(to left, #0095ff,#37383a);
    border-top-right-radius: 4px;
    border-bottom-right-radius: 4px;
    opacity: 0;
    animation: 1s anim-lightspeed-in ease forwards;
  }
  .chart--dev .chart__bar:nth-of-type(11) {
    animation-delay: 2.7s;
  }
  .chart--dev .chart__bar:nth-of-type(10) {
    animation-delay: 2.5s;
  }
  .chart--dev .chart__bar:nth-of-type(9) {
    animation-delay: 2.3s;
  }
  .chart--dev .chart__bar:nth-of-type(8) {
    animation-delay: 2.1s;
  }
  .chart--dev .chart__bar:nth-of-type(7) {
    animation-delay: 1.9s;
  }
  .chart--dev .chart__bar:nth-of-type(6) {
    animation-delay: 1.7s;
  }
  .chart--dev .chart__bar:nth-of-type(5) {
    animation-delay: 1.5s;
  }
  .chart--dev .chart__bar:nth-of-type(4) {
    animation-delay: 1.3s;
  }
  .chart--dev .chart__bar:nth-of-type(3) {
    animation-delay: 1.1s;
  }
  .chart--dev .chart__bar:nth-of-type(2) {
    animation-delay: 0.9s;
  }
  .chart--dev .chart__bar:nth-of-type(1) {
    animation-delay: 0.7s;
  }
  .chart--prod .chart__bar:nth-of-type(2) {
    animation-delay: 4.2s;
  }
  .chart--prod .chart__bar:nth-of-type(1) {
    animation-delay: 4s;
  }
  .chart--design .chart__bar:nth-of-type(3) {
    animation-delay: 5.6s;
  }
  .chart--design .chart__bar:nth-of-type(2) {
    animation-delay: 5.4s;
  }
  .chart--design .chart__bar:nth-of-type(1) {
    animation-delay: 5.2s;
  }
  .chart__label {
    padding-left: 10px;
    line-height: 30px;
    color: white;
  }
  @keyframes anim-lightspeed-in {
    0% {
      transform: translateX(-200%);
      opacity: 1;
    }
    100% {
      transform: translateX(0);
      opacity: 1;
    }
  }

  /*  right div animation*/
  .slide-in-right {
	-webkit-animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
	        animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
}

@-webkit-keyframes slide-in-right {
  0% {
    -webkit-transform: translateX(1000px);
            transform: translateX(1000px);
    opacity: 0;
  }
  100% {
    -webkit-transform: translateX(0);
            transform: translateX(0);
    opacity: 1;
  }
}
@keyframes slide-in-right {
  0% {
    -webkit-transform: translateX(1000px);
            transform: translateX(1000px);
    opacity: 0;
  }
  100% {
    -webkit-transform: translateX(0);
            transform: translateX(0);
    opacity: 1;
  }
}

/* left div animation */
.slide-in-left {
	-webkit-animation: slide-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
	        animation: slide-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
}

@-webkit-keyframes slide-in-left {
  0% {
    -webkit-transform: translateX(-1000px);
            transform: translateX(-1000px);
    opacity: 0;
  }
  100% {
    -webkit-transform: translateX(0);
            transform: translateX(0);
    opacity: 1;
  }
}
@keyframes slide-in-left {
  0% {
    -webkit-transform: translateX(-1000px);
            transform: translateX(-1000px);
    opacity: 0;
  }
  100% {
    -webkit-transform: translateX(0);
            transform: translateX(0);
    opacity: 1;
  }
}

